# XRoboToolkit-PC-Service

./: .gitignore  CMakeLists.txt  Doxyfile  README-CN.md  README.md  THIRD_PARTY_NOTICE.txt  get_started_guide.md  package.xml  troubleshooting.md
RoboticsService/: .gitignore  CMakeLists.txt  qt-gcc.sh  qt-gcc_aarch64.sh  qt-msvc.bat  sign_files.txt
RoboticsService/Business/: Business_global.h  CMakeLists.txt  business.cpp  business.h
RoboticsService/Business/DeviceManage/: devicemanagement.cpp  devicemanagement.h  devicemanagement_msg.h
RoboticsService/Business/Model/Device/: devicemodel.cpp  devicemodel.h
RoboticsService/CommonUtils/: CMakeLists.txt  CommonUtils_global.h  MessageHandler.h  OSFileID.h  PreciseTimer.h  commonutils.cpp  commonutils.h
RoboticsService/DeviceConnectionManager/: CMakeLists.txt  DeviceConnectionManager.cpp  DeviceConnectionManager.h  DeviceConnectionManager_global.h
RoboticsService/DeviceConnectionManager/EventHandler/: connecteventhandler.cpp  connecteventhandler.h  connecteventhandlerinqt.cpp  connecteventhandlerinqt.h
RoboticsService/DeviceConnectionManager/Manage/: Manage_global.h  connectionmanage.cpp  connectionmanage.h
RoboticsService/DeviceConnectionManager/Manage/TCPConnectionManage/: tcpconnectionmanage.cpp  tcpconnectionmanage.h  tcpserverworker.cpp  tcpserverworker.h
RoboticsService/DeviceConnectionManager/Model/: connectionmodel.cpp  connectionmodel.h  tcpconnectionmodel.cpp  tcpconnectionmodel.h
RoboticsService/DeviceConnectionManager/utils/: utils.cpp  utils.h
RoboticsService/GrpcSDK/lib/debug/: absl_bad_any_cast_impl.lib  absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_city.lib  absl_civil_time.lib  absl_cord.lib  absl_debugging_internal.lib  absl_demangle_internal.lib  absl_examine_stack.lib  absl_exponential_biased.lib  absl_failure_signal_handler.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_graphcycles_internal.lib  absl_hash.lib  absl_hashtablez_sampler.lib  absl_int128.lib  absl_leak_check.lib  absl_leak_check_disable.lib  absl_log_severity.lib  absl_malloc_internal.lib  absl_periodic_sampler.lib  absl_random_distributions.lib  absl_random_internal_distribution_test_util.lib  absl_random_internal_platform.lib  absl_random_internal_pool_urbg.lib  absl_random_internal_randen.lib  absl_random_internal_randen_hwaes.lib  absl_random_internal_randen_hwaes_impl.lib  (+28 more)
RoboticsService/GrpcSDK/lib/release/: absl_bad_any_cast_impl.lib  absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_city.lib  absl_civil_time.lib  absl_cord.lib  absl_debugging_internal.lib  absl_demangle_internal.lib  absl_examine_stack.lib  absl_exponential_biased.lib  absl_failure_signal_handler.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_hash.lib  (+60 more)
RoboticsService/PXREAGRPCServer/: CMakeLists.txt  FeedbackController.cpp  FeedbackController.h  PXREAGRPCServer.cpp  PXREAGRPCServer.h
RoboticsService/PXREARobotSDK/: CMakeLists.txt  PXREARobotSDK.cpp  build.sh  build_aarch64.sh  qt-msvc.bat
RoboticsService/PXREAService/: PXREAService.grpc.pb.cc  PXREAService.grpc.pb.h  PXREAService.pb.cc  PXREAService.pb.h  PXREAService.proto
RoboticsService/PXREAService/linux_aarch64/: PXREAService.grpc.pb.cc  PXREAService.pb.cc  PXREAService.pb.h  generate.sh
RoboticsService/PXREAService/linux_x86/: PXREAService.grpc.pb.h  PXREAService.pb.cc  PXREAService.pb.h  PXREAService.proto  generate.sh
RoboticsService/Package/debPack/: control  postinst  roboticsservice.desktop  run2D.sh  run3D.sh  runRobotDataRecorder.sh  runService.sh  setup.sh
RoboticsService/Package/debPackAArch64/: control  prerm  roboticsservice.desktop  run2D.sh  runRobotDataRecorder.sh  runService.sh  setup.sh
RoboticsService/Package/innosetup/: robot.iss
RoboticsService/Redistributable/linux/: ConsoleDemo  RobotDataRecorder  RobotDemoQt  epDBBackup.s3db  libapplogrs.d  setting.ini
RoboticsService/Redistributable/linux_aarch64/: ConsoleDemo  RobotDataRecorder  RobotDemoQt
RoboticsService/Redistributable/win/: PXREASetting.ini  epDBBackup.s3db  install.bat  key-setting.ini  run2D.bat  run3D.bat  runDataRecorder.bat  runService.bat  setting.ini  uninstallScript.bat
RoboticsService/RoboticsServiceProcess/: CMakeLists.txt  RoboticsServiceProcess_resource.rc.in  main.cpp  qml.qrc  singleapplication.cpp  singleapplication.h
RoboticsService/SDKDemo/CppSrc/ConsoleDemo/: .gitignore  CMakeLists.txt  build.bat  build.sh  build_aarch64.sh  main.cpp
RoboticsService/SDKDemo/CppSrc/RobotDataRecorder/: CMakeLists.txt  SDKCaller.cpp  SDKCaller.h  SensorDataHandler.cpp  SensorDataHandler.h  SensorDataSaver.cpp  SensorDataSaver.h  build.bat  build.sh  build_aarch64.sh  main.cpp  main.qml
Utils/: README.md  diagnose_pxrea.sh  setup_pxrea_linux.sh  verify_pxrea_setup.sh
documents/html/: _p_x_r_e_a_robot_s_d_k_8h.html  _p_x_r_e_a_robot_s_d_k_8h.js  _p_x_r_e_a_robot_s_d_k_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_484abb86a24913ed99cb144804c3e93e.html  dir_484abb86a24913ed99cb144804c3e93e.js  dir_bf016de5de4d9844155e3999f9269f84.html  dir_bf016de5de4d9844155e3999f9269f84.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  navtreedata.js  navtreeindex0.js  struct_p_x_r_e_a_dev_custom_message.html  struct_p_x_r_e_a_dev_custom_message.js  struct_p_x_r_e_a_dev_state_json.html  struct_p_x_r_e_a_dev_state_json.js
documents/html/search/: all_1.js  all_2.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js
innosetup/Languages/: Chinese.isl  Korean.isl
(+590 files in other folders)
